<resources>
    <string name="app_name">N+Cure</string>
    <string name="hint_user_id">User ID</string>
    <string name="lbl_new_patient">New</string>
    <string name="lbl_patients">Records</string>
    <string name="lbl_doctors">Doctors</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_user">User:</string>
    <string name="lbl_last_used">Last used:</string>
    <string name="lbl_schedule">My Schedule</string>
    <string name="lbl_patient_list">Last visited patients</string>
    <string name="lbl_add_appointment">Add New Appointment</string>
    <string name="lbl_add_patient">Add New Patient</string>
    <string name="lbl_date">Date</string>
    <string name="tlbl_ime">Time</string>
    <string name="hint_description">Description</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_disease">Disease</string>
    <string name="hint_id">ID (auto generated)</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_photo">Photo</string>
    <string name="msg_invalid_login_data">Your login data is invalid. Please log back in.</string>
    <string name="msg_empty_description">Please fill the description.</string>
    <string name="msg_empty_patient_name">Please fill patient name.</string>
    <string name="msg_empty_city">Please fill the city.</string>
    <string name="msg_empty_disease">Please fill the disease</string>
    <string name="hint_search">Search</string>
    <string name="title_activity_sync">Sync</string>
    <string name="lbl_action_start_sync">Start sync</string>
    <string name="lbl_action_sync">Sync</string>
    <string name="msg_no_camera">No camera functionality found!</string>
</resources>
