<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yehancha.jay.ncure.PatientActivity"
    android:background="@color/colorActivityBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/user_info" />

            <include layout="@layout/action_buttons" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/colorCardBackground"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_add_patient" />

            <include layout="@layout/date_time" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:background="@color/colorCardBackground"
                android:hint="@string/hint_name"
                android:gravity="top"
                android:id="@+id/et_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:background="@color/colorCardBackground"
                android:hint="@string/hint_address"
                android:gravity="top"
                android:id="@+id/et_address"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:background="@color/colorCardBackground"
                android:hint="@string/hint_city"
                android:gravity="top"
                android:id="@+id/et_city"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:background="@color/colorCardBackground"
                android:hint="@string/hint_description"
                android:gravity="top"
                android:id="@+id/et_description"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:background="@color/colorCardBackground"
                android:hint="@string/hint_disease"
                android:gravity="top"
                android:id="@+id/et_disease"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:background="@color/colorCardBackground"
                android:hint="@string/hint_id"
                android:gravity="top"
                android:id="@+id/et_id"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_save"
                android:id="@+id/btn_save"
                android:layout_gravity="right" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
